# Project3

./: LICENSE  Project3MCMCEMCEE.py  README.md  mcmc.py  pyproject.toml
src/project3_package/: mcmc.py
src/project3_package.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: mcmc.py
