[project]name = "project3_package"version = "0.0.1"authors = [  { name="John Batarekh", email="jvbatae@syr.edu" },  { name="Nadita Sudha Tiwari", email=""}]description = "Package containing Project 3"readme = "README.md"requires-python = ">=3.8"classifiers = [    "Programming Language :: Python :: 3",    "License :: OSI Approved :: MIT License",    "Operating System :: OS Independent",][project.urls]Homepage = "https://github.com/Leif178/Project3"